<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#9CFF5722"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/komponen1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="152dp"
        android:layout_height="73dp"
        android:background="#61B31EE9"
        android:text="@string/kom1"
        android:textColor="#F8000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/komponen2"
        android:layout_width="159dp"
        android:layout_height="73dp"
        android:layout_marginTop="32dp"
        android:background="#8107FF6A"
        android:text="@string/kom2"
        android:textColor="#F8000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen1" />

    <Button
        android:id="@+id/komponen3"
        android:layout_width="159dp"
        android:layout_height="81dp"
        android:layout_marginTop="28dp"
        android:background="#AE2196F3"
        android:text="@string/kom3"
        android:textColor="#F8000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen2" />

    <Button
        android:id="@+id/komponen4"
        android:layout_width="158dp"
        android:layout_height="73dp"
        android:layout_marginTop="28dp"
        android:background="#56FFEB3B"
        android:text="@string/kom4"
        android:textColor="#F8000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen3" />

    <Button
        android:id="@+id/komponen5"
        android:layout_width="164dp"
        android:layout_height="63dp"
        android:layout_marginTop="28dp"
        android:background="#433F78B5"
        android:text="@string/kom5"
        android:textColor="#F8000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/komponen4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="343dp"
        android:layout_height="41dp"
        android:layout_marginBottom="24dp"
        android:text="@string/awal"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>